[metadata]
name = report
version = 0.0.1
author = Jag Pravesh
author_email =jp.pannu@gmail.com
description = A html report template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaypannu/report
project_urls =
    Bug Tracker = https://github.com/jaypannu/report/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
